2007-05-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.py:
	  Sergio points out that backoff all the way to one hour is a bit
	  much. So, try to reconnect at least every 5 minutes.

2007-05-18  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/wmv/admin_gtk.py:
	* flumotion/component/encoders/wmv/wmv.glade:
	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/encoders/wmv/wmv.xml: Make the WMV
	encoder autodiscover available GStreamer plug-ins and report
	errors to the admin UI. Implement a GTK UI for knowing which
	encoder is in use and additional informations about it's
	configuration.

2007-05-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	  Fix sibling-like-but-not-quite imports.  Fixes #864.

2007-05-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.py
	  (WMAEncoder.get_pipeline_string):
	  Fix spelling.  Should also make the component work.

2007-04-27  Michael Smith <msmith@fluendo.com>

	* README:
	  Write up some notes on using this, advantages/disadvantages of
	  push/pull modes, etc.

2007-04-27  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Streams are allowed to be declared only in the extended stream
	  properties object, not in the stream properties object, so handle
	  that. Reenable checking that packets are for declared streams.
	  Fix a wrong debug message.

2007-04-25  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Handle timeout callLaters correctly.
	  Update some comments.

2007-04-25  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Fix buffer generation in pull mode; don't include 8-byte header.

	* flumotion/component/producers/wms.py:
	  Implement pull mode.

	* flumotion/component/producers/wms.xml: